# xsched

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTORS.md  Makefile  README.en.md  README.md  README_en.md
docs/: xsched-intro-2025-en.md  xsched-intro-2025-zh.md
examples/: README.md
examples/Linux/10_change_policy/: README.md
examples/Linux/1_transparent_sched/: Makefile  README.md
examples/Linux/2_give_hints/: Makefile  README.md  app_with_hints.cu  app_with_hints.hip
examples/Linux/3_intra_process_sched/: Makefile  README.md  app_concurrent.cu  app_concurrent.hip
examples/Linux/4_manual_sched/: Makefile  README.md  app_sched.cu  app_sched.hip
examples/Linux/5_infer_serving/: .gitignore  README.md
examples/Linux/5_infer_serving/BERT/: .gitignore  README.md  download.sh
examples/Linux/5_infer_serving/client/: run.sh
examples/Linux/5_infer_serving/model-repo/bert-high/: config.pbtxt
examples/Linux/5_infer_serving/model-repo/bert-low/: config.pbtxt
examples/Linux/5_infer_serving/model-repo/bert-norm/: config.pbtxt
examples/Linux/5_infer_serving/python/: README.md  builder_utils.py  eval.py
examples/Linux/5_infer_serving/results/scripts/: plot.py  triton.plt
examples/Linux/5_infer_serving/server/: triton-backend-xsched.patch
examples/Linux/6_gui_window/: README.md  gtk.py
examples/Linux/7_terminal_window/: README.md  app.cu  app.hip
examples/Linux/8_nontransparent_sched/: Makefile  README.md  app_nontrans_sched.cu
examples/Linux/9_llama.cpp/: README.md  test_llamacpp.sh
examples/Windows/: README.md
examples/Windows/1_transparent_sched/: README.md
examples/Windows/1_transparent_sched/cuda/: Makefile  README.md  app.cu
examples/Windows/1_transparent_sched/levelzero/: README.md  app.py  requirements.txt
examples/Windows/1_transparent_sched/opencl/: README.md  app.py
examples/Windows/2_give_hints/: Makefile  README.md  app_with_hints.cu
examples/Windows/3_intra_process_sched/: Makefile  README.md  app_concurrent.cu
examples/Windows/4_manual_sched/cuda/: Makefile  README.md  app_sched.cu
examples/Windows/4_manual_sched/levelzero/: Makefile  README.md  app_sched.cpp
examples/Windows/8_nontransparent_sched/cuda/: Makefile  README.md  app_nontrans_sched.cu
examples/Windows/8_nontransparent_sched/levelzero/: Makefile  README.md  app_nontrans_sched.cpp  vector_add.cl
include/: README.md
include/xsched/: hint.h  types.h  xqueue.h
integration/llama.cpp/: README.md  llamacpp-xsched-73e53dc.patch
integration/triton/: README.md
preempt/: CMakeLists.txt  README.md
preempt/include/xsched/preempt/hal/: hw_command.h  hw_queue.h
preempt/include/xsched/preempt/sched/: agent.h
preempt/src/hal/: hw_command.cpp  hw_queue.cpp
preempt/src/sched/: agent.cpp  executor.cpp  hint.cpp
preempt/src/xqueue/: async_xqueue.cpp  launch_worker.cpp  xqueue.cpp
protocol/: README.md
protocol/include/xsched/protocol/: def.h  device.h  names.h
protocol/src/: names.cpp
sched/: README.md
sched/include/xsched/sched/policy/: awf.h  chpf.h  hhpf.h  hpf.h  kedf.h  lax.h  policy.h  pup.h  up.h
sched/include/xsched/sched/protocol/: hint.h  status.h
sched/include/xsched/sched/scheduler/: global.h  local.h  scheduler.h
sched/src/policy/: awf.cpp  chpf.cpp  hhpf.cpp  hpf.cpp  kedf.cpp  lax.cpp  policy.cpp  pup.cpp  up.cpp
sched/src/protocol/: hint.cpp
sched/src/scheduler/: global.cpp  local.cpp  scheduler.cpp
service/: CMakeLists.txt  README.md
service/cli/include/: cli.h
service/cli/src/: cli.cpp  main.cpp
service/common/include/: client.h  convert.h  xsched_assert.h
service/common/src/: client.cpp  convert.cpp
service/server/include/: server.h
service/server/src/: main.cpp  server.cpp
service/tools/: CMakeLists.txt
service/tools/change_policy/: CMakeLists.txt
service/tools/change_policy/src/: main.cpp
service/tools/x11_launcher/: CMakeLists.txt  README.md
service/tools/x11_launcher/include/: launcher.h
service/tools/x11_launcher/src/: launcher.cpp  main.cpp
service/tools/x11_monitor/: CMakeLists.txt  README.md
service/tools/x11_monitor/include/: monitor.h
service/tools/x11_monitor/src/: main.cpp  monitor.cpp
tools/autogen/: cuda_func_map.py  gen.py  merge_headers.py
utils/: CMakeLists.txt
utils/include/xsched/utils/: common.h  lib.h  lock.h  log.h  psync.h  symbol.h  timing.h  waitpid.h  xassert.h
utils/src/: lock.cpp  psync.cpp  timing.cpp  waitpid.cpp
